Create OpenNewReceiptRequest model in new API.Contract project

--- a/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
+++ b/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
@@ -20,4 +20,8 @@
         <InternalsVisibleTo Include="ExpenseExplorer.API.Tests"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\ExpenseExplorer.API.Contract\ExpenseExplorer.API.Contract.csproj"/>
+    </ItemGroup>
+
 </Project>
