--- a/tests/ExpenseExplorer.API.Tests/ExpenseExplorer.API.Tests.csproj
+++ b/tests/ExpenseExplorer.API.Tests/ExpenseExplorer.API.Tests.csproj
@@ -12,8 +12,8 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0"/>
-        <PackageReference Include="FsCheck" Version="2.16.6"/>
-        <PackageReference Include="FsCheck.Xunit" Version="2.16.6"/>
+        <PackageReference Include="FsCheck" Version="3.0.0-rc2"/>
+        <PackageReference Include="FsCheck.Xunit" Version="3.0.0-rc2"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.2"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
