Add ExpenseExplorer.Application projects

--- a/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
+++ b/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\ExpenseExplorer.API.Contract\ExpenseExplorer.API.Contract.csproj"/>
+        <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj"/>
     </ItemGroup>
 
 </Project>
