--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -2,8 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>default</LangVersion>
+        <Authors>Frognar</Authors>
+        <AnalysisMode>All</AnalysisMode>
+        <AnalysisLevel>latest</AnalysisLevel>
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
