--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -33,4 +33,15 @@
         <ProjectReference Include="..\shared\ExpenseExplorer.Tests.Shared\ExpenseExplorer.Tests.Shared.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
 </Project>
