--- a/.editorconfig
+++ b/.editorconfig
@@ -20,7 +20,7 @@ resharper_blank_lines_after_control_transfer_statements = 1
 resharper_blank_lines_after_multiline_statements = 1
 resharper_blank_lines_before_single_line_comment = 1
 resharper_braces_redundant = true
-resharper_csharp_empty_block_style = together
+resharper_csharp_empty_block_style = multiline
 resharper_csharp_keep_blank_lines_in_code = 1
 resharper_csharp_keep_blank_lines_in_declarations = 1
 resharper_csharp_wrap_after_declaration_lpar = true
