--- a/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
+++ b/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <ProjectReference Include="..\ExpenseExplorer.API.Contract\ExpenseExplorer.API.Contract.csproj"/>
         <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj"/>
+        <ProjectReference Include="..\ExpenseExplorer.Domain\ExpenseExplorer.Domain.csproj"/>
     </ItemGroup>
 
 </Project>
