--- a/tests/shared/ExpenseExplorer.Tests.Shared/ExpenseExplorer.Tests.Shared.csproj
+++ b/tests/shared/ExpenseExplorer.Tests.Shared/ExpenseExplorer.Tests.Shared.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <RootNamespace>ExpenseExplorer.Tests.Common</RootNamespace>
+    </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\..\src\ExpenseExplorer.API.Contract\ExpenseExplorer.API.Contract.csproj"/>
         <ProjectReference Include="..\..\..\src\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj"/>
