Rename project ExpenseExplorer.Tests.Shared => ExpenseExplorer.Tests.Common

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -30,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\shared\ExpenseExplorer.Tests.Shared\ExpenseExplorer.Tests.Shared.csproj"/>
+        <ProjectReference Include="..\shared\ExpenseExplorer.Tests.Common\ExpenseExplorer.Tests.Common.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
