--- a/src/ExpenseExplorer.API/appsettings.json
+++ b/src/ExpenseExplorer.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "EventStore": "esdb://localhost:2113?tls=false"
+  },
   "AllowedHosts": "*"
 }
