--- a/res/eventstore/docker-compose.yaml
+++ b/res/eventstore/docker-compose.yaml
@@ -1,32 +1,18 @@
-version: '3.4'
+version: "3.4"
 
 services:
   eventstore.db:
-    image: eventstore/eventstore:release-5.0.11
+    image: eventstore/eventstore:24.2.0-jammy
     environment:
       - EVENTSTORE_CLUSTER_SIZE=1
       - EVENTSTORE_RUN_PROJECTIONS=All
-      - EVENTSTORE_START_STANDARD_PROJECTIONS=True
-      - EVENTSTORE_DB=/var/lib/eventstore-data
-      - EVENTSTORE_INDEX=/var/lib/eventstore-index
-      - EVENTSTORE_LOG=/var/log/eventstore
-      - EVENTSTORE_EXT_TCP_PORT=1113
-      - EVENTSTORE_EXT_HTTP_PORT=2113
+      - EVENTSTORE_START_STANDARD_PROJECTIONS=true
+      - EVENTSTORE_HTTP_PORT=2113
+      - EVENTSTORE_INSECURE=true
+      - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
     ports:
       - "1113:1113"
       - "2113:2113"
     volumes:
-      - type: volume
-        source: eventstore-volume-data
-        target: /var/lib/eventstore-data
-      - type: volume
-        source: eventstore-volume-index
-        target: /var/lib/eventstore-index
-      - type: volume
-        source: eventstore-volume-logs
-        target: /var/log/eventstore
-
-volumes:
-  eventstore-volume-data:
-  eventstore-volume-index:
-  eventstore-volume-logs:
+      - ./data:/var/lib/eventstore
+      - ./logs:/var/log/eventstore
