install Testcontainers package

--- a/tests/ExpenseExplorer.API.Tests/ExpenseExplorer.API.Tests.csproj
+++ b/tests/ExpenseExplorer.API.Tests/ExpenseExplorer.API.Tests.csproj
@@ -4,4 +4,9 @@
         <ProjectReference Include="..\..\src\ExpenseExplorer.API\ExpenseExplorer.API.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Testcontainers" Version="3.8.0"/>
+        <PackageReference Include="Testcontainers.EventStoreDb" Version="3.8.0"/>
+    </ItemGroup>
+
 </Project>
