--- a/.editorconfig
+++ b/.editorconfig
@@ -66,6 +66,9 @@ dotnet_naming_rule.private_fields_must_begin_with_underscore_and_be_in_camel_cas
 dotnet_naming_rule.private_fields_must_begin_with_underscore_and_be_in_camel_case.style = require_underscore_prefix_and_camel_case
 dotnet_naming_rule.private_fields_must_begin_with_underscore_and_be_in_camel_case.severity = error
 
+
+csharp_qualified_using_at_nested_scope = true
+
 # StyleCop.Analyzers
 #SA0001: XML comment analysis is disabled
 dotnet_diagnostic.sa0001.severity = none
