--- a/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
+++ b/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
@@ -8,4 +8,8 @@
         <ProjectReference Include="..\ExpenseExplorer.Domain\ExpenseExplorer.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0"/>
+    </ItemGroup>
+
 </Project>
