--- a/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
+++ b/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.2.1"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0"/>
     </ItemGroup>
 
 </Project>
