Replace postgres db in test with Testcontainers

--- a/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
+++ b/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
@@ -17,4 +17,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="ExpenseExplorer.API.Tests.Integration"/>
+    </ItemGroup>
+
 </Project>
