--- a/tests/ExpenseExplorer.API.Tests.Integration/ExpenseExplorer.API.Tests.Integration.csproj
+++ b/tests/ExpenseExplorer.API.Tests.Integration/ExpenseExplorer.API.Tests.Integration.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <PackageReference Include="Testcontainers" Version="3.8.0"/>
         <PackageReference Include="Testcontainers.EventStoreDb" Version="3.8.0"/>
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.8.0"/>
     </ItemGroup>
 
 </Project>
