Swap read model code from infrastructure layer with new one, delete old code

--- a/tests/ExpenseExplorer.API.Tests.Integration/ExpenseExplorer.API.Tests.Integration.csproj
+++ b/tests/ExpenseExplorer.API.Tests.Integration/ExpenseExplorer.API.Tests.Integration.csproj
@@ -2,6 +2,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\ExpenseExplorer.API\ExpenseExplorer.API.csproj"/>
+        <ProjectReference Include="..\..\src\ExpenseExplorer.ReadModel\ExpenseExplorer.ReadModel.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
