--- a/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
+++ b/src/ExpenseExplorer.API/ExpenseExplorer.API.csproj
@@ -15,6 +15,7 @@
         <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj"/>
         <ProjectReference Include="..\ExpenseExplorer.Domain\ExpenseExplorer.Domain.csproj"/>
         <ProjectReference Include="..\ExpenseExplorer.Infrastructure\ExpenseExplorer.Infrastructure.csproj"/>
+        <ProjectReference Include="..\ExpenseExplorer.ReadModel\ExpenseExplorer.ReadModel.csproj"/>
     </ItemGroup>
 
 </Project>
