Move Either monad to FunctionalCore shared project

--- a/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
+++ b/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
@@ -8,6 +8,7 @@
         <ProjectReference Include="..\CommandHub.DependencyInjection\CommandHub.DependencyInjection.csproj"/>
         <ProjectReference Include="..\CommandHub\CommandHub.csproj"/>
         <ProjectReference Include="..\ExpenseExplorer.Domain\ExpenseExplorer.Domain.csproj"/>
+        <ProjectReference Include="..\FunctionalCore\FunctionalCore.csproj" />
     </ItemGroup>
 
     <ItemGroup>
