--- a/src/ExpenseExplorer.ReadModel/ExpenseExplorer.ReadModel.csproj
+++ b/src/ExpenseExplorer.ReadModel/ExpenseExplorer.ReadModel.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\CommandHub\CommandHub.csproj"/>
+        <ProjectReference Include="..\FunctionalCore\FunctionalCore.csproj" />
     </ItemGroup>
 
 </Project>
