--- a/src/ExpenseExplorer.Domain/ExpenseExplorer.Domain.csproj
+++ b/src/ExpenseExplorer.Domain/ExpenseExplorer.Domain.csproj
@@ -1,3 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+    <ItemGroup>
+        <ProjectReference Include="..\FunctionalCore\FunctionalCore.csproj"/>
+    </ItemGroup>
 </Project>
