Add string length limitations in DbReceiptHeader

--- a/.editorconfig
+++ b/.editorconfig
@@ -39,6 +39,7 @@ resharper_keep_existing_invocation_parens_arrangement = false
 resharper_keep_existing_primary_constructor_declaration_parens_arrangement = false
 resharper_keep_existing_property_patterns_arrangement = false
 resharper_keep_existing_switch_expression_arrangement = false
+resharper_place_accessorholder_attribute_on_same_line = false
 resharper_place_linq_into_on_new_line = false
 resharper_place_simple_embedded_statement_on_same_line = false
 resharper_wrap_array_initializer_style = chop_if_long
