--- a/src/ExpenseExplorer.API/appsettings.Development.json
+++ b/src/ExpenseExplorer.API/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "EventStore": "esdb://localhost:2113?tls=false",
+    "Postgres": "Host=localhost;Port=5432;Database=ExpenseExplorer;Username=postgres;Password=5tr0ngP@55w0rd"
   }
 }
