--- a/src/ExpenseExplorer.API/appsettings.Production.json
+++ b/src/ExpenseExplorer.API/appsettings.Production.json
@@ -1,3 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EventStore": "esdb://eventstore:2113?tls=false",
+    "Postgres": "Host=postgresql;Port=5432;Database=ExpenseExplorer;Username=postgres;Password=5tr0ngP@55w0rd"
+  },
   "AllowedHosts": "*"
 }
