--- a/src/ExpenseExplorer.GUI/ExpenseExplorer.GUI.csproj
+++ b/src/ExpenseExplorer.GUI/ExpenseExplorer.GUI.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ExpenseExplorer.API.Contract\ExpenseExplorer.API.Contract.csproj" />
+    </ItemGroup>
+
 </Project>
