install Radzen.Blazor package

--- a/src/ExpenseExplorer.GUI/ExpenseExplorer.GUI.csproj
+++ b/src/ExpenseExplorer.GUI/ExpenseExplorer.GUI.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\ExpenseExplorer.API.Contract\ExpenseExplorer.API.Contract.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Radzen.Blazor" Version="4.32.1"/>
+    </ItemGroup>
+
 </Project>
