Read API url from configuration

--- a/src/ExpenseExplorer.GUI/appsettings.Development.json
+++ b/src/ExpenseExplorer.GUI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "API": "http://localhost:5163"
   }
 }
