API Dockerfile updated and moved to SLN dir

--- a/res/fullapi/docker-compose.yml
+++ b/res/fullapi/docker-compose.yml
@@ -39,7 +39,7 @@ services:
 
   api:
     build:
-      context: ../../src/ExpenseExplorer.API/.
+      context: ../../.
       dockerfile: Dockerfile
     ports:
       - "5163:8080"
