--- a/res/fullapi/docker-compose.yml
+++ b/res/fullapi/docker-compose.yml
@@ -40,7 +40,7 @@ services:
   api:
     build:
       context: ../../.
-      dockerfile: Dockerfile
+      dockerfile: src/ExpenseExplorer.API/Dockerfile
     ports:
       - "5163:8080"
     environment:
