Add curl to API docker image

--- a/src/ExpenseExplorer.API/Dockerfile
+++ b/src/ExpenseExplorer.API/Dockerfile
@@ -1,4 +1,5 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+RUN apt-get update && apt-get install -y curl
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
