Reference application in infrastructure

--- a/fresh/ExpenseExplorer/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
+++ b/fresh/ExpenseExplorer/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj" />
       <ProjectReference Include="..\ExpenseExplorer.Domain\ExpenseExplorer.Domain.csproj" />
     </ItemGroup>
 
