using directive placement outside namespace

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ csharp_prefer_braces = true:none
 csharp_style_var_elsewhere = false:none
 csharp_style_var_for_built_in_types = false:suggestion
 csharp_style_var_when_type_is_apparent = true:none
-csharp_using_directive_placement = inside_namespace:silent
+csharp_using_directive_placement = outside_namespace:silent
 
 # ReSharper properties
 resharper_blank_lines_after_control_transfer_statements = 1
