--- a/.editorconfig
+++ b/.editorconfig
@@ -97,6 +97,9 @@ dotnet_diagnostic.sa1633.severity = none
 dotnet_diagnostic.s2094.severity = none
 
 # NET.CodeAnalyzers
+#CA1034: Nested types should not be visible
+dotnet_diagnostic.ca1034.severity = none
+
 #CA1715: Prefix generic type parameters with 'T'
 dotnet_diagnostic.ca1715.severity = suggestion
 
