--- a/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
+++ b/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
@@ -6,16 +6,16 @@
     <PackageReference Include="Radzen.Blazor" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Update="Resources\Components\Pages\Home.resx">
+    <EmbeddedResource Update="Resources\Components\Pages\Receipts.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Home.Designer.cs</LastGenOutput>
+      <LastGenOutput>Receipts.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Resources\Components\Pages\Home.Designer.cs">
+    <Compile Update="Resources\Components\Pages\Receipts.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Home.resx</DependentUpon>
+      <DependentUpon>Receipts.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
