Refactor receipt handling by introducing `IReceiptRepository` with an in-memory implementation, simplifying `ReceiptService` logic.

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,5 +19,8 @@ csharp_style_namespace_declarations = file_scoped
 # CA2007: Consider calling ConfigureAwait on the awaited task
 dotnet_diagnostic.CA2007.severity = none
 
+# CA1812: Avoid uninstantiated internal classes
+dotnet_diagnostic.CA1812.severity = none
+
 # CS1591: Missing XML comment for publicly visible type or member
 dotnet_diagnostic.CS1591.severity = none
