--- a/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
+++ b/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
@@ -22,6 +22,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>NewReceipt.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Resources\SharedResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Shared.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\Components\Pages\Receipts.Designer.cs">
@@ -38,6 +42,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>NewReceipt.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\SharedResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SharedResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
