--- a/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
+++ b/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
@@ -49,4 +49,7 @@
       <DependentUpon>SharedResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj" />
+  </ItemGroup>
 </Project>
