--- a/.editorconfig
+++ b/.editorconfig
@@ -24,3 +24,6 @@ dotnet_diagnostic.CA1812.severity = none
 
 # CS1591: Missing XML comment for publicly visible type or member
 dotnet_diagnostic.CS1591.severity = none
+
+# CA1716: Identifiers should not match keywords
+dotnet_diagnostic.CA1716.severity = none
