--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,5 +6,6 @@
     <PackageVersion Include="Dapper" Version="2.1.66" />
     <PackageVersion Include="Radzen.Blazor" Version="6.6.1" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.6.0.109712" />
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.0.0"/>
   </ItemGroup>
 </Project>
