Update AppHost project with PostgreSQL and Dapper package references

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="Dapper" Version="2.1.66" />
     <PackageVersion Include="Radzen.Blazor" Version="6.6.1" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.6.0.109712" />
-    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.3.0"/>
+    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.3.0" />
   </ItemGroup>
 </Project>
