--- a/src/aspire/AppHost/AppHost.csproj
+++ b/src/aspire/AppHost/AppHost.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost"/>
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" />
+        <PackageReference Include="Dapper" />
     </ItemGroup>
 
 </Project>
