Integrate ExpenseExplorer.WebApp project into AppHost and configure PostgreSQL resources

--- a/src/aspire/AppHost/AppHost.csproj
+++ b/src/aspire/AppHost/AppHost.csproj
@@ -14,4 +14,8 @@
         <PackageReference Include="Dapper" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\ExpenseExplorer.WebApp\ExpenseExplorer.WebApp.csproj" />
+    </ItemGroup>
+
 </Project>
