Add Npgsql package reference to ExpenseExplorer.Infrastructure project

--- a/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
+++ b/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Dapper" />
+    <PackageReference Include="Npgsql" />
   </ItemGroup>
 </Project>
