Add project reference to ExpenseExplorer.Application in Infrastructure project

--- a/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
+++ b/src/ExpenseExplorer.Infrastructure/ExpenseExplorer.Infrastructure.csproj
@@ -3,4 +3,7 @@
     <PackageReference Include="Dapper" />
     <PackageReference Include="Npgsql" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj" />
+  </ItemGroup>
 </Project>
