Add project reference to ExpenseExplorer.Infrastructure in WebApp project

--- a/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
+++ b/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
@@ -51,5 +51,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExpenseExplorer.Application\ExpenseExplorer.Application.csproj" />
+    <ProjectReference Include="..\ExpenseExplorer.Infrastructure\ExpenseExplorer.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
