--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,9 @@ csharp_style_namespace_declarations = file_scoped
 
 # Static code analysis rule customizations
 
+# CA1031: Do not catch general exception types
+dotnet_diagnostic.CA1031.severity = none
+
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
 
