--- a/.editorconfig
+++ b/.editorconfig
@@ -15,9 +15,11 @@ insert_final_newline = false
 csharp_style_namespace_declarations = file_scoped
 
 # Static code analysis rule customizations
-
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.CA1031.severity = none
+
+# CA1040: Avoid empty interfaces
+dotnet_diagnostic.CA1040.severity = none
 
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
@@ -33,3 +35,6 @@ dotnet_diagnostic.CA2007.severity = none
 
 # CS1591: Missing XML comment for publicly visible type or member
 dotnet_diagnostic.CS1591.severity = none
+
+# S2326: Unused type parameters should be removed
+dotnet_diagnostic.S2326.severity = none
