--- a/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
+++ b/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
@@ -1,1 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <PackageReference Include="dotMaybe" />
+    <PackageReference Include="dotResult" />
+  </ItemGroup>
+</Project>
