--- a/.editorconfig
+++ b/.editorconfig
@@ -36,5 +36,8 @@ dotnet_diagnostic.CA2007.severity = none
 # CS1591: Missing XML comment for publicly visible type or member
 dotnet_diagnostic.CS1591.severity = none
 
+# S2094: Classes should not be empty
+dotnet_diagnostic.S2094.severity = none
+
 # S2326: Unused type parameters should be removed
 dotnet_diagnostic.S2326.severity = none
