--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="Dapper" Version="2.1.66" />
     <PackageVersion Include="dotMaybe" Version="1.0.0" />
     <PackageVersion Include="dotResult" Version="1.2.0" />
+    <PackageVersion Include="dotValid" Version="0.5.0" />
     <PackageVersion Include="Npgsql" Version="9.0.3" />
     <PackageVersion Include="Radzen.Blazor" Version="6.6.1" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.6.0.109712" />
