--- a/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
+++ b/src/ExpenseExplorer.Application/ExpenseExplorer.Application.csproj
@@ -2,5 +2,6 @@
   <ItemGroup>
     <PackageReference Include="dotMaybe" />
     <PackageReference Include="dotResult" />
+    <PackageReference Include="dotValid" />
   </ItemGroup>
 </Project>
