--- a/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
+++ b/src/ExpenseExplorer.WebApp/ExpenseExplorer.WebApp.csproj
@@ -30,6 +30,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ConfirmationDialog.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Components\Pages\Reports.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Reports.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\Components\Pages\Receipts.Designer.cs">
@@ -56,6 +60,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>ConfirmationDialog.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\Components\Pages\Reports.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Reports.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
