--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,5 +41,5 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Deploy with Docker Compose
-      run: docker-compose up -d --build
+      run: docker compose up -d --build
 
